Added some configs

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,4 +1,5 @@
-CFLAGS += -g
+CFLAGS += -g -fcf-protection=none -O2             
+LDFLAGS += 
 OBJS := main.o cache.o jenkins_hash.o slabs.o
 
 main: ${OBJS}
