Mainly changing to static exec.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,5 +1,5 @@
-CFLAGS += -g -fcf-protection=none -O2             
-LDFLAGS += 
+CFLAGS += -g -fcf-protection=none -O2 -static      
+LDFLAGS += -static
 OBJS := main.o cache.o jenkins_hash.o slabs.o
 
 main: ${OBJS}
