Modified application to use an input wrapper which enc/decrypts commands

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,8 @@
-CFLAGS += -g -fcf-protection=none -O2 -static      
-LDFLAGS += -static
-OBJS := main.o cache.o jenkins_hash.o slabs.o
+INC=-Imbedtls/include
+CFLAGS += -g -fcf-protection=none -O2 -static ${INC}
+LDFLAGS += -static -Lmbedtls/lib 
+LDLIBS += -lmbedcrypto
+OBJS := main.o cache.o jenkins_hash.o slabs.o cache_wrapper.o
 
 main: ${OBJS}
 
